@@ -1,3 +1,10 @@
+2013-03-26  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* src/dpxfile.c, src/dpxfile.h, src/dvi.c, src/dvicodes.h
+	src/dvipdfmx.c, src/pdfximage.c, src/spc_dvips.c src/vf.c:
+	Apply speed up patch for dvipdfmx by N. Tsuchimura also on
+	xdvipdfmx.
+
 2013-03-24  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* src/dpxfile.c: Change dpx_create_temp_file() because tmpnam()
